--- a/index.html
+++ b/index.html
@@ -13,6 +13,65 @@
 
 </div>
 
+ <div class="paper image">
+  <p</p>
+  <img src="images/2.jpeg" />
+</div>
+  
+<div class="paper image">
+  <p> and I just wanted to say</p>
+    <p>Happy Birthday 😍 </p>
+   <img src="images/1.jpeg" />
+</div>
+
+   <div class="paper image">
+  <p</p>
+  <img src="images/2.jpeg" />
+</div>
+  
+<div class="paper image">
+  <p> and I just wanted to say</p>
+    <p>Happy Birthday 😍 </p>
+   <img src="images/1.jpeg" />
+</div>
+   <div class="paper image">
+  <p</p>
+  <img src="images/2.jpeg" />
+</div>
+  
+<div class="paper image">
+  <p> and I just wanted to say</p>
+    <p>Happy Birthday 😍 </p>
+   <img src="images/1.jpeg" />
+</div>
+
+   <div class="paper image">
+  <p</p>
+  <img src="images/2.jpeg" />
+</div>
+  
+<div class="paper image">
+  <p> and I just wanted to say</p>
+    <p>Happy Birthday 😍 </p>
+   <img src="images/1.jpeg" />
+</div>
+
+  
+<div class="paper image">
+  <p</p>
+  <img src="images/2.jpeg" />
+</div>
+  
+<div class="paper image">
+  <p> and I just wanted to say</p>
+    <p>Happy Birthday 😍 </p>
+   <img src="images/1.jpeg" />
+</div>
+  
+<div class="paper image">
+  <p</p>
+  <img src="images/2.jpeg" />
+</div>
   
 <div class="paper image">
   <p> and I just wanted to say</p>
