--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <p class="p1">Drag the papers to move!</p>
 </div>
 <!-- partial -->
-<script src="./mobile.js"></script>
+<script src="./script.js"></script>
 <script>
   const music = document.getElementById("bg-music");
   const toggleBtn = document.getElementById("music-toggle");
