--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 </div>
   
 <div class="paper image">
-  <p> and I just wanted to say</p>
-  <p>Happy Birthday 😍 </p>
+  <p> Sir, your simplicity inspires us. I’ll revise </p>
+  <p> better next time 🙏</p>
   <img src="images/1.jpeg" />
 </div>
 
@@ -48,8 +48,8 @@
 </div>
 
 <div class="paper image">
-  <p> and I just wanted to say</p>
-  <p>Happy Birthday 😍 </p>
+  <p> Your energy makes Organic</p>
+  <p>Chemistry awesome 🔥</p>
   <img src="images/1.jpeg" />
 </div>
 
@@ -59,8 +59,8 @@
 </div>
 
 <div class="paper image">
-  <p> and I just wanted to say</p>
-  <p>Happy Birthday 😍 </p>
+  <p>Your mnemonics make Zoology easier </p>
+  <p>  Thank you 🌿 </p>
   <img src="images/1.jpeg" />
 </div>
 
@@ -70,8 +70,8 @@
 </div>
 
 <div class="paper image">
-  <p> and I just wanted to say</p>
-  <p>Happy Birthday 😍 </p>
+  <p> Sir, your depth in teaching makes Chemistry clear </p>
+  <p> Grateful 🙏 </p>
   <img src="images/1.jpeg" />
 </div>
 
@@ -81,8 +81,8 @@
 </div>
 
 <div class="paper image">
-  <p> and I just wanted to say</p>
-  <p>Happy Birthday 😍 </p>
+  <p> Sir, your humor and knowledge make Physics fun</p>
+  <p> Thank you 😍 </p>
   <img src="images/1.jpeg" />
 </div>
 
