--- a/index.html
+++ b/index.html
@@ -103,19 +103,18 @@
 </div>
 
 <div class="paper image">
-  <p>How can be</p>
-  <p>someone so good ❤️</p>
-  <img src="images/3.jpg" />
+  <p>No matter our mistakes, </p>
+  <p>you guide us patiently.</p>
 </div>
 
 <div class="paper red">
-  <p class="p1"> but have a heart of gold </p>
-  <p class="p2">Person 😍</p>
+  <p class="p1">You don’t just teach, you inspire </p>
+  <p class="p2">us to be better humans</p>
 </div>
 
 <div class="paper">
-  <p class="p1">You are average in looks </p>
-  <p class="p1">Amazing <span style="color: red !important;">❤️</span></p>
+  <p class="p1">Happy Teachers </p>
+  <p class="p1">Day <span style="color: red !important;">❤️</span></p>
 </div>
 
 <div class="paper">
